# aha-skill

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  start-dev.sh
apps/doc/: sandbox_deployment.md  sandbox_design.md  sandbox_implementation_trd.md
apps/gateway/: package.json
apps/gateway/src/: index.ts
apps/node-service/: Dockerfile  package.json
apps/node-service/src/: index.ts  types.ts
apps/node-service/src/converters/: base.ts  index.ts  openapi-converter.ts  rest-converter.ts
apps/python-service/: Dockerfile  pyproject.toml  sandbox_manual.md
apps/python-service/app/: __init__.py  main.py  models.py
apps/python-service/app/converters/: __init__.py  base.py  mcp_converter.py
apps/python-service/app/sandbox/: __init__.py  exceptions.py  executor.py  filesystem.py  manager.py  models.py
apps/python-service/sandbox_images/: Dockerfile.python  build_rootfs.sh
apps/python-service/tests/: test_sandbox.py
apps/web/: index.html  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css  types.ts
apps/web/src/components/: Header.tsx  SkillPreview.tsx  SourceEditor.tsx  SourceTypeSelector.tsx
apps/web/src/lib/: api.ts
apps/web/src/pages/: ArticlePage.tsx  ConverterPage.tsx  LearnPage.tsx  MarketplacePage.tsx  PlaygroundPage.tsx
